# QuantumEigensolver

./: .gitignore  requirements.txt
cvqe/: CMakeLists.txt
cvqe/QuEST/: README.txt
cvqe/src/: main_benchmarks.cpp  main_pytest.cpp  qcirc.cpp  qcirc.h  vqe.cpp  vqe.h
cvqe/src/gates/: all.h  basic.h  block_a.h
cvqe/src/py/: eigen_numpy.cpp  python_cvqe.cpp
input/: H2.qu  H_BeH2_N=10.qu  H_BeH2_N=10.txt  H_BeH2_N=8.qu  H_BeH2_N=8.txt  H_H2_N=2.txt  H_LiH_N=4.qu  H_LiH_N=4.txt
input/h2/: H_H2_N=4_R=0.3.qu  H_H2_N=4_R=0.3.txt  H_H2_N=4_R=0.4.qu  H_H2_N=4_R=0.4.txt  H_H2_N=4_R=0.5.qu  H_H2_N=4_R=0.5.txt  H_H2_N=4_R=0.6.qu  H_H2_N=4_R=0.6.txt  H_H2_N=4_R=0.7.qu  H_H2_N=4_R=0.7.txt  H_H2_N=4_R=0.8.qu  H_H2_N=4_R=0.8.txt  H_H2_N=4_R=0.9.qu  H_H2_N=4_R=0.9.txt  H_H2_N=4_R=1.0.qu  H_H2_N=4_R=1.0.txt  H_H2_N=4_R=1.1.qu  H_H2_N=4_R=1.1.txt  H_H2_N=4_R=1.2.qu  H_H2_N=4_R=1.2.txt  H_H2_N=4_R=1.3.qu  H_H2_N=4_R=1.3.txt  H_H2_N=4_R=1.4.qu  H_H2_N=4_R=1.4.txt  H_H2_N=4_R=1.5.qu  H_H2_N=4_R=1.5.txt  H_H2_N=4_R=1.6.qu  H_H2_N=4_R=1.6.txt  H_H2_N=4_R=1.7.qu  H_H2_N=4_R=1.7.txt  H_H2_N=4_R=1.8.qu  H_H2_N=4_R=1.8.txt  H_H2_N=4_R=1.9.qu  H_H2_N=4_R=1.9.txt  H_H2_N=4_R=2.0.qu  H_H2_N=4_R=2.0.txt  H_H2_N=4_R=2.1.qu  H_H2_N=4_R=2.1.txt  H_H2_N=4_R=2.2.qu  H_H2_N=4_R=2.2.txt  (+6 more)
notebooks/: Circuit growing-2.ipynb  Circuit growing.ipynb  Fixed circuit.ipynb  Show history.ipynb  Statistics.ipynb  setup.py
src/: VQE_for_H2.py  circuit_growing.py  circuits.py  kandala_circuit.py  mutations.py  npq.py  plot_iterations.py  qaoa_plot.py  qio.py  quantum_circuit.py  simulation_benchmark.py
src/algo/: cvqe_wrapper.py  func_optimizer.py  one_plus_lambda.py  one_plus_one.py  vqe.py
src/circuit/: __init__.py  architecture.py  conversions.py  gates.py  serializer.py
src/iohelper/: hamiltonians.py  qio.py  results.py  txt_to_qu.py
src/playground/: block_one.py  circuit_drawer.py  cma_es.py  cvqe_test.py  qaoa_plot.py  (+1 more)
(+3 files in other folders)
